@@ -2,14 +2,19 @@ package objetos;
 
 import java.time.LocalDate;
 import java.time.LocalTime;
-import java.util.ArrayList;
 import java.util.HashSet;
 import java.util.LinkedList;
 import java.util.List;
 import java.util.NoSuchElementException;
 import java.util.stream.Collectors;
-
 import ConexionDB.GestorEstacionPostgreSQLDAO;
+import javax.swing.BoxLayout;
+import javax.swing.JButton;
+import javax.swing.JFrame;
+import javax.swing.JLabel;
+import javax.swing.JPanel;
+import javax.swing.JTextArea;
+import javax.swing.WindowConstants;
 import elementosSwing.grafo2D.Estacion2D;
 import elementosSwing.grafo2D.PanelGrafo;
 
@@ -19,7 +24,7 @@ enum EstadoEstacion {
 
 public class Estacion implements Comparable<Estacion>{
 	
-	private GestorEstacionPostgreSQLDAO gestorEstacion = new GestorEstacionPostgreSQLDAO();
+	private static GestorEstacionPostgreSQLDAO gestorEstacion = new GestorEstacionPostgreSQLDAO();
 	public static HashSet<Estacion> listEstaciones=new HashSet<Estacion>(); 
 	public static Integer contadorId;
 	public static final Double D_PAGERANK=0.5d;
@@ -80,14 +85,14 @@ public class Estacion implements Comparable<Estacion>{
 	private LocalTime horarioApertura;
 	private LocalTime horarioCierre;
 	private EstadoEstacion estado;
-	private LocalDate fechaUltimoMantenimiento=LocalDate.now();
+	private LocalDate fechaCreacion=LocalDate.now();
+	private HashSet<Conexion> listConexiones=new HashSet<Conexion>();
 	private Double pagerank = 1.0;
 	private Double pesoTotal = 0.0;
+	private LinkedList<Mantenimiento> listaMantenimientos=new LinkedList<Mantenimiento>();
 	private Estacion2D e2d;
 	public Double posx=Math.random()*600+50;
 	public Double posy=Math.random()*450+50;
-	private HashSet<Conexion> listConexiones=new HashSet<Conexion>();
-	private ArrayList<Mantenimiento> listaMantenimientos=new ArrayList<Mantenimiento>();
 
 	public Estacion(String nombre, LocalTime horarioApertura, LocalTime horarioCierre, Boolean estado) throws NombreOcupadoException {
 		
@@ -109,7 +114,7 @@ public class Estacion implements Comparable<Estacion>{
 	}
 	
 	public Estacion(Integer id, String nombre, LocalTime horarioApertura, LocalTime horarioCierre, 
-			String estado, LocalDate ultimoMantenimiento, Double pagerank, Double pesoTotal, 
+			String estado, LocalDate fechaCreacion, Double pagerank, Double pesoTotal, 
 			Double posicionX, Double posicionY) { //throws NombreOcupadoException {
 		
 		//if(nombreDisponible(nombre)) {
@@ -123,7 +128,7 @@ public class Estacion implements Comparable<Estacion>{
 			else {
 				this.estado = EstadoEstacion.EN_MANTENIMIENTO;
 			}
-			this.fechaUltimoMantenimiento = ultimoMantenimiento;
+			this.fechaCreacion = fechaCreacion; //cambiar en db
 			this.pagerank = pagerank;
 			this.pesoTotal = pesoTotal;
 			this.e2d = new Estacion2D(this);
@@ -189,24 +194,73 @@ public class Estacion implements Comparable<Estacion>{
 		listaMantenimientos.add(new Mantenimiento(descripcion));
 	}
 	public void setMantenimiento() {
-		this.estado = EstadoEstacion.EN_MANTENIMIENTO;
-		listaMantenimientos.add(new Mantenimiento());
+		if (this.estado==EstadoEstacion.OPERATIVA) {
+			
+			String comentarioMant="";
+			JFrame dialog=new JFrame();
+			JPanel rootp=new JPanel();
+			dialog.setLocationRelativeTo(null);
+			dialog.setAlwaysOnTop(true);
+			dialog.setTitle("Comentario inicio mantenimiento");
+			dialog.setDefaultCloseOperation(WindowConstants.DISPOSE_ON_CLOSE);
+			rootp.setLayout(new BoxLayout(rootp, BoxLayout.Y_AXIS));
+			rootp.add(new JLabel("Ingrese comentario de comienzo de mantenimiento"));
+			JTextArea jt=new JTextArea(10,51);
+			jt.setLineWrap(true);
+			rootp.add(jt);
+			JButton btnAceptar=new JButton("Aceptar");
+			btnAceptar.addActionListener(e -> {
+				dialog.dispose();
+			});
+			comentarioMant=((JTextArea)(rootp.getComponent(1))).getText();
+			rootp.add(btnAceptar);
+			dialog.setContentPane(rootp);
+			dialog.pack();
+			dialog.setVisible(true);
+			listaMantenimientos.add(new Mantenimiento(comentarioMant));
+			this.estado = EstadoEstacion.EN_MANTENIMIENTO;
+			PanelGrafo.repintarGrafo();
+		}
 	}
 	public void setOperativa(String descripcion) {
-		Mantenimiento ultimoMantenimiento = listaMantenimientos.get(listaMantenimientos.size()-1);
+		Mantenimiento ultimoMantenimiento = listaMantenimientos.getLast();
 		ultimoMantenimiento.finMantenimiento(descripcion);
 		this.estado = EstadoEstacion.OPERATIVA;
 	}
 	public void setOperativa() {
-		Mantenimiento ultimoMantenimiento = listaMantenimientos.get(listaMantenimientos.size()-1);
-		ultimoMantenimiento.finMantenimiento();
-		this.estado = EstadoEstacion.OPERATIVA;
+		if(this.estado==EstadoEstacion.EN_MANTENIMIENTO) {
+			Mantenimiento ultimoMantenimiento = listaMantenimientos.getLast();
+			String comentarioMant="";
+			JFrame dialog=new JFrame();
+			JPanel rootp=new JPanel();
+			dialog.setLocationRelativeTo(null);
+			dialog.setAlwaysOnTop(true);
+			dialog.setTitle("Comentario inicio mantenimiento");
+			dialog.setDefaultCloseOperation(WindowConstants.DISPOSE_ON_CLOSE);
+			rootp.setLayout(new BoxLayout(rootp, BoxLayout.Y_AXIS));
+			rootp.add(new JLabel("Ingrese comentario de finalización de mantenimiento"));
+			JTextArea jt=new JTextArea(10,51);
+			jt.setLineWrap(true);
+			rootp.add(jt);
+			JButton btnAceptar=new JButton("Aceptar");
+			btnAceptar.addActionListener(e -> {
+				dialog.dispose();
+			});
+			comentarioMant=((JTextArea)(rootp.getComponent(1))).getText();
+			rootp.add(btnAceptar);
+			dialog.setContentPane(rootp);
+			dialog.pack();
+			dialog.setVisible(true);
+			ultimoMantenimiento.finMantenimiento(comentarioMant);
+			this.estado = EstadoEstacion.OPERATIVA;
+			PanelGrafo.repintarGrafo();
+		}
 	}
 	public LocalDate getFechaUltimoMantenimiento() {
-		return fechaUltimoMantenimiento;
-	}
-	public void setFechaUltimoMantenimiento(LocalDate fechaUltimoMantenimiento) {
-		this.fechaUltimoMantenimiento = fechaUltimoMantenimiento;
+		if(listaMantenimientos.isEmpty())
+			return fechaCreacion;
+		else
+			return listaMantenimientos.getLast().getFechaInicio();
 	}
 	public HashSet<Conexion> getListConexiones() {
 		return listConexiones;
@@ -215,11 +269,11 @@ public class Estacion implements Comparable<Estacion>{
 		this.listConexiones = listaConexiones;
 	}
 
-	public ArrayList<Mantenimiento> getListaMantenimientos() {
+	public LinkedList<Mantenimiento> getListaMantenimientos() {
 		return listaMantenimientos;
 	}
 
-	public void setListaMantenimientos(ArrayList<Mantenimiento> listaMantenimientos) {
+	public void setListaMantenimientos(LinkedList<Mantenimiento> listaMantenimientos) {
 		this.listaMantenimientos = listaMantenimientos;
 	}
 	public Double getPagerank() {
